--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     <img src="img/logo.png" width="140" height="140" alt="Logo" >
                 </article>
                 <article class="grid-6">
-                    <h3>How it works?</h3>
-                    <p>Sazerac is not a FrameWork CSS, instead it is mix of many good ideas and existing code in the most important FrameWorks out there.</p>
+                    <h6>BUENOS DIALS</h6>
                     <p>Sazerac uses LESS and emulates the work of Bootstrap.</p>
                     <p>Inside the file "Sazerac CSS Boilerplate" you will find all the LESS files that make up the Sazerac boilerplate. The most important ones are <strong>"variables.less"</strong> which contains all the defined variables that we used to personalize the Sazerac boilerplate, from the color of links to the number of columns in our grid. </p>
                     <p>Once you've edited <strong>"variables.less"</strong> and modified its values, you can open the file called <strong>"sazerac.less"</strong> where the rest of the less files are linked. You can delete or add new files depending on the flavor of your own code.</p>
